# case-engenharia

./: .env.example  .gitignore  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt
agent_code/: agent.py  requirements.txt
agents/cemig_agent/: agent.py  requirements.txt  teste_benchmark_complete.evalset.json  teste_benchmark_manual.evalset.json
agents/cemig_agent/common/: config.py
agents/cemig_agent/data/: csv_to_gcp.py
agents/cemig_agent/prompts/: prompt_agent_engineer.txt
agents/cemig_agent/tools/: execute_sql_query.py  get_schema_db.py  get_schema_dictionary.py
scripts/: run_generate_csv_with_responses.sh  run_generate_tests.sh  run_generate_tests_with_ui.sh  save_bd.py
src/: __init__.py  config.py
src/agents/: root_agent.py
src/agents/prompts/: prompt_agent_engineer.txt
src/agents/tools/: execute_sql_query.py  get_schema.py  get_schema_db.py  (+1 more)
src/common/: config.py
src/data/: csv_to_gcp.py
tests/: conftest.py  test_final_response.py
tests/final_response/: generation_report.json  response_test_001.test.json  response_test_002.test.json  response_test_003.test.json  response_test_004.test.json  response_test_005.test.json  response_test_006.test.json  response_test_007.test.json  response_test_008.test.json  response_test_009.test.json  response_test_010.test.json  response_test_011.test.json  response_test_012.test.json  response_test_013.test.json  response_test_014.test.json  response_test_015.test.json  response_test_016.test.json  response_test_017.test.json  response_test_018.test.json  test_config.json
(+14 files in other folders)
