[tool.poetry]
name = "case-engenharia"
version = "0.1.0"
description = "Case de Engenharia da CEMIG"
authors = ["evellynnicole <mevellyn4@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
google-cloud = "0.34.0"
pandas = "2.3.1"
sqlalchemy = "2.0.41"
psycopg2-binary = ">=2.9.10,<3.0.0"
chardet = "5.2.0"
python-dotenv = "1.1.1"
google-adk = "^1.6.1"
pypdf2 = "^3.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
